--- a/styles/travel.css
+++ b/styles/travel.css
@@ -324,7 +324,7 @@ font-weight: 300;
 }
 /* small device start */
 @media screen and (max-width:600px) {
-       .title-container{
+    .title-container{
         flex-direction: column;
        }
        nav{
@@ -332,14 +332,18 @@ font-weight: 300;
        }
        .expolre-section{
         width: 100%;
+        height: 100%;
         margin-right: 0px;
         margin-left: 0px;
+        background-size:cover;
+        background-repeat:no-repeat;
        }
        .explore-title{
         padding-top: 10px;
        }
        .explore-input{
-        margin-left:40px
+        margin-left:40px;
+
        }
        .our-tour{
         flex-direction: column;
@@ -374,7 +378,15 @@ font-weight: 300;
        .footer-logo{
         margin-left: 50px;
        }
-       body{
+       
+       .news-letter{
+        padding-left: 40px;
+       }
+       .news-des{
+        width: auto;
+       }
+       .card{
         width: 100%;
        }
+       
 }
